Configuration for theme changes, create a context for theme, create theme toggler button

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 /* Hide scrollbar for Webkit browsers (Chrome, Safari) */
 ::-webkit-scrollbar {
   display: none;
